# web3-rs

./: .env.example  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
abi/: ERC721.json
artifacts/: Counter.json
src/: call_erc20.rs  call_erc721.rs  config.rs  deploy_contract.rs  deploy_contract_with_bytecode.rs  gen_wallet.rs  get_lastest_block.rs  hd_wallet.rs  main.rs  math_utilities.rs  query_logs.rs  raw_tx.rs  send_eth.rs
