[package]
name = "alloy-script"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.8.1", features = ["full"] }
alloy-serde = "0.8.3"
alloy-signer-local = { version = "0.8.3", features = ["mnemonic"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
hex = "0.4.3"
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "time"] }

[[bin]]
name = "call_erc20"
path = "src/call_erc20.rs"

[[bin]]
name = "call_erc721"
path = "src/call_erc721.rs"

[[bin]]
name = "get_lastest_block"
path = "src/get_lastest_block.rs"

[[bin]]
name = "deploy_contract"
path = "src/deploy_contract.rs"

[[bin]]
name = "deploy_contract_with_bytecode"
path = "src/deploy_contract_with_bytecode.rs"

[[bin]]
name = "send_eth"
path = "src/send_eth.rs"

[[bin]]
name = "hd_wallet"
path = "src/hd_wallet.rs"

[[bin]]
name = "gen_wallet"
path = "src/gen_wallet.rs"

[[bin]]
name = "raw_tx"
path = "src/raw_tx.rs"

[[bin]]
name = "query_logs"
path = "src/query_logs.rs"


